# django-business-metrics

./: .cruft.json  .gitignore  CHANGELOG.md  LICENCE  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
django_business_metrics/: collector.py  metrics.py  metrics_manager.py  views.py
django_business_metrics/_internal/: __init__.py  metrics_manager.py
django_business_metrics/v0/: __init__.py
src/django_business_metrics/_internal/: __init__.py  metrics_manager.py
tests/: conftest.py  django_fixtures.py  settings.py
tests/unit/api/: test_metrics.py  test_metrics_manager.py  test_setup.py
tests/unit/internal/: test_setup.py
tests/v0/: test_metrics.py  test_metrics_manager.py
