[project]
name = "django-business-metrics"
version = "1.0.0"
description = "Django Prometheus business metrics"
license = {file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Reef Technologies", email = "opensource@reef.pl"},
    {name = "Vykintas Baltrusaitis", email = "vykintas.baltrusaitis@reef.pl"},
]
classifiers = [
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=3",
    "prometheus-client>=0.13.0",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "django-stubs>=1.12.0",
    "mypy>=0.971",
    "nox>=2023",
    "pytest>=6",
    "pytest-django",
    "ruff>=0.0.272",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="tests.settings"

[tool.ruff]
# TODO add D
select = ["E", "F", "I", "UP"]
# TODO: remove E501 once docstrings are formatted
ignore = [
    "D100", "D105", "D107", "D200", "D202", "D203", "D205", "D212", "D400", "D401", "D415",
    "D101", "D102","D103", "D104", # TODO remove once we have docstring for all public methods
    "E501", # TODO: remove E501 once docstrings are formatted
]
line-length = 100

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["D", "F403", "F405"]
